--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 html {
+  height: 100%;
   font-size: 10px;
   color: #666;
 }
 
 body {
+  position: relative;
+  height: inherit;
   background-color: #eee;
 }
 
@@ -61,4 +68,34 @@ body {
 
 .item-priority {
   color: #eee;
+}
+
+/* modal */
+
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.modal {
+  position: absolute;
+  top: 15%;
+  left: 15%;
+  width: 70%;
+  height: 70%;
+  padding: 15px;
+  background-color: #fff;
+}
+
+.btn-modal-close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
